tests/profile/error/camera/gotogeo_wrongtype_longitude.profile
{
  "version": { "major": 1, "minor": 0 },
  "camera": {
    "type": "goToGeo",
    "anchor": "anchor",
    "latitude": 1.0,
    "longitude": "a",
    "altitude": 4.0
  }
}
